--- a/index.html
+++ b/index.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title></title>
-    <script src="js/mui.min.js"></script>
-    <link href="css/mui.min.css" rel="stylesheet"/>
-    <script type="text/javascript" charset="utf-8">
-      	mui.init();
-    </script>
-</head>
-<body>
-	
-</body>
+
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<title></title>
+		<script src="js/mui.min.js"></script>
+		<link href="css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel="stylesheet" type="text/css" href="css/iconfont.css" />
+		<script type="text/javascript" charset="utf-8">
+			mui.init();
+		</script>
+	</head>
+
+	<body>
+		<nav class="mui-bar mui-bar-tab" id="footer">
+			<a id="defaultTab" class="mui-tab-item mui-active" href="pages/home.html">
+				<div><span class="iconfont icon-home"></span></div>
+				<span class="mui-tab-label">首页</span>
+			</a>
+			<a id="shangxueyuan" class="mui-tab-item" href="pages/cate.html">
+				<div><span class="iconfont icon-cascades"></span></div>
+				<span class="mui-tab-label">分类</span>
+			</a>
+			<a id="gongqiu" class="mui-tab-item" href="pages/cart.html">
+				<div> <span class="iconfont icon-cart" style="position:relative ;"><span class="gwcnum" style="color: #FFFFFF;">0</span></span></div> 
+				<span class="mui-tab-label">购物车</span>
+			</a>
+
+			<a class="mui-tab-item" href="pages/my.html">
+				<div> <span class="iconfont icon-people"></span></div>
+				<span class="mui-tab-label">我的</span>
+			</a>
+		</nav>
+	</body>
+
 </html>
