--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link href="css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" type="text/css" href="css/iconfont.css" />
+		<!--<link rel="stylesheet" type="text/css" href="css/home.css" />-->
 		<script type="text/javascript" charset="utf-8">
 			mui.init();
 		</script>
@@ -22,11 +23,11 @@
 			</a>
 			<a id="shangxueyuan" class="mui-tab-item" href="pages/cate.html">
 				<div><span class="iconfont icon-cascades"></span></div>
-				<span class="mui-tab-label">分类</span>
+				<span class="mui-tab-label">行情</span>
 			</a>
 			<a id="gongqiu" class="mui-tab-item" href="pages/cart.html">
 				<div> <span class="iconfont icon-cart" style="position:relative ;"><span class="gwcnum" style="color: #FFFFFF;">0</span></span></div> 
-				<span class="mui-tab-label">购物车</span>
+				<span class="mui-tab-label">资产</span>
 			</a>
 
 			<a class="mui-tab-item" href="pages/my.html">
