--- a/public/login.html
+++ b/public/login.html
@@ -34,8 +34,10 @@
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			mui.init()
+			mui.init();
 			$("#email, #pass").keyup(function() {
 				if ($("#email").val() != '' &&  $("#pass").val() != ''){
 					$("#sign").removeClass("cannot");
