--- a/public/register.html
+++ b/public/register.html
@@ -34,7 +34,10 @@
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
+			mui.init();
 			$("#title").keyup(function() {
 			    if ($("#title").val().length >= 6) {
 			        $("#title").val($("#title").val().substring(0, 6));
