update home and notice page

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 				</div>
 				<span class="mui-tab-label">首页</span>
 			</a>
-			<a id="shangxueyuan" class="mui-tab-item" href="pages/cate.html">
+			<a id="shangxueyuan" class="mui-tab-item" href="pages/market.html">
 				<div class="img_box">
 					<img src="img/home/icon_quotation0.png" alt="" />
 					<!--<img src="img/home/icon_quotation1.png" alt="" />-->
 				</div>
 				<span class="mui-tab-label">行情</span>
 			</a>
-			<a id="gongqiu" class="mui-tab-item" href="pages/cart.html">
+			<a id="gongqiu" class="mui-tab-item" href="pages/property.html">
 				<div class="img_box">
 					<img src="img/home/icon_transaction0.png" alt="" />
 					<!--<img src="img/home/icon_transaction1.png" alt="" />-->
@@ -36,7 +36,7 @@
 				<span class="mui-tab-label">资产</span>
 			</a>
 
-			<a class="mui-tab-item" href="pages/my.html">
+			<a class="mui-tab-item" href="pages/mine.html">
 				<div class="img_box">
 					<img src="img/home/icon_mine0.png" alt="" />
 					<!--<img src="img/home/icon_mine1.png" alt="" />-->
@@ -53,7 +53,7 @@
 		mui.init();
 		ca.init();
 		// 创建子页面
-		var pathArray = ['pages/home.html'];
+		var pathArray = ['pages/home.html','pages/market.html','pages/property.html','pages/mine.html'];
 		ca.tabBar(pathArray)
 //		$(document).ready(function() {　　
 //			console.log($('.mui-tab-item').is('.mui-active'))
