--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>首页</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/home.css" />
@@ -58,39 +58,61 @@
 			</div>
 		</div>
 		<div class="title">
-			缩略图居左
+			官方公告
 		</div>
 		<ul class="mui-table-view">
-			<li class="mui-table-view-cell mui-media">
+			<li class="mui-table-view-cell mui-media newact" url="/public/notice.html">
 				<a href="javascript:;">
 					<img class="mui-media-object mui-pull-left" src="../img/home/list_icon.png">
 					<div class="mui-media-body">
-						幸福
-						<p class='mui-ellipsis'>能和心爱的人一起睡觉，是件幸福的事情；可是，打呼噜怎么办？</p>
+						<p class="list_title">
+							<span>Bithumb</span>
+							<span>2018-03-09 15:00</span>
+						</p>
+						<p class='mui-ellipsis'>比特币黄金（BTG）网络升级指南比特币黄金（BTG）网络升级指南比特币黄金（BTG）网络升级指南</p>
 					</div>
 				</a>
 			</li>
-			<li class="mui-table-view-cell mui-media">
-				<a href="javascript:;">
-					<img class="mui-media-object mui-pull-left" src="../img/home/list_icon.png">
-					<div class="mui-media-body"> 
-						木屋
-						<p class='mui-ellipsis'>想要这样一间小木屋，夏天挫冰吃瓜，冬天围炉取暖.</p>
-					</div>
-				</a>
-			</li>
-			<li class="mui-table-view-cell mui-media">
+			<li class="mui-table-view-cell mui-media newact" url="/public/login.html">
 				<a href="javascript:;">
 					<img class="mui-media-object mui-pull-left" src="../img/home/list_icon.png">
 					<div class="mui-media-body">
-						CBD
-						<p class='mui-ellipsis'>烤炉模式的城，到黄昏，如同打翻的调色盘一般.</p>
+						<p class="list_title">
+							<span>Bithumb</span>
+							<span>2018-03-09 15:00</span>
+						</p>
+						<p class='mui-ellipsis'>比特币黄金（BTG）网络升级指南</p>
+					</div>
+				</a>
+			</li>
+			<li class="mui-table-view-cell mui-media newact" url="/public/notice.html">
+				<a href="javascript:;">
+					<img class="mui-media-object mui-pull-left" src="../img/home/list_icon.png">
+					<div class="mui-media-body">
+						<p class="list_title">
+							<span>Bithumb</span>
+							<span>2018-03-09 15:00</span>
+						</p>
+						<p class='mui-ellipsis'>比特币黄金（BTG）网络升级指南</p>
+					</div>
+				</a>
+			</li>
+			<li class="mui-table-view-cell mui-media newact" url="/public/notice.html">
+				<a href="javascript:;">
+					<img class="mui-media-object mui-pull-left" src="../img/home/list_icon.png">
+					<div class="mui-media-body">
+						<p class="list_title">
+							<span>Bithumb</span>
+							<span>2018-03-09 15:00</span>
+						</p>
+						<p class='mui-ellipsis'>比特币黄金（BTG）网络升级指南</p>
 					</div>
 				</a>
 			</li>
 
 		</ul>
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/jquery-2.1.1.min.js"></script>
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
