--- a/pages/mine.html
+++ b/pages/mine.html
@@ -3,13 +3,16 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>我的</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
 	</head>
 
 	<body>
+		我的
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init()
 		</script>
