--- a/public/register.html
+++ b/public/register.html
@@ -21,13 +21,20 @@
 			</div>
 			<h4>邮箱验证码</h4>
 			<div class="tuigu_shuru">
+				<!--<input type="tel" name="" id="title" value="" />
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>-->
 				<input type="tel" name="" id="title" value="" />
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
 		    </div>
 		    <p class="send_code">发送验证码</p>
 			<button type="button" class="mui-btn mui-btn-primary cannot" id="next">下一步</button>
