--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 	<script src="js/benben.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/common.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" charset="UTF-8">
-		mui.init();
-		ca.init();
+//		mui.init();
+//		ca.init();
 		// 创建子页面
-		var pathArray = ['pages/home.html','pages/market.html','pages/property.html','pages/mine.html'];
-		ca.tabBar(pathArray)
+//		var pathArray = ['pages/home.html','pages/market.html','pages/property.html','pages/mine.html'];
+//		ca.tabBar(pathArray)
 //		$(document).ready(function() {　　
 //			console.log($('.mui-tab-item').is('.mui-active'))
 //			if ($('.mui-tab-item').is('.mui-active')){
@@ -68,5 +68,29 @@
 //
 //		});
 	</script>
+	<script type="text/javascript" charset="utf-8">
+			//mui初始化
+			mui.init();
+			var subPages = ['pages/home.html','pages/market.html','pages/property.html','pages/mine.html'];
+			var subPageStyle = {
+				top: "0",
+				bottom: "53px"
+
+			};
+			mui.plusReady(function() {
+				var self = plus.webview.currentWebview();
+				for(var i = 0; i < subPages.length; i++) {
+					var sub = plus.webview.create(subPages[i], subPages[i], subPageStyle);
+					sub.hide();
+					self.append(sub)
+				}
+				plus.webview.show(subPages[0])
+			});
+			mui(".mui-bar-tab").on("tap", "a", function(e) {
+				var tapPage = this.getAttribute("href");
+				plus.webview.show(tapPage, "fade-in", 100);
+
+			})			
+		</script>
 
 </html>
