--- a/pages/property.html
+++ b/pages/property.html
@@ -6,10 +6,16 @@
 		<title>资产</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
+			<link rel="stylesheet" type="text/css" href="../css/property.css" />
 	</head>
 
 	<body>
-		资产
+		<header class="mui-bar mui-bar-nav">
+			<h1 class="mui-title">资产</h1>
+		</header>
+		<div class="property_main">
+			
+		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
