--- a/pages/property.html
+++ b/pages/property.html
@@ -6,15 +6,66 @@
 		<title>资产</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
-			<link rel="stylesheet" type="text/css" href="../css/property.css" />
+		<link rel="stylesheet" type="text/css" href="../css/property.css" />
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<h1 class="mui-title">资产</h1>
 		</header>
-		<div class="property_main">
-			
+		<div class="mui-content property_main">
+			<!--无-->
+			<div class="property_card blue_bg">
+				<span>新建DCAR钱包</span>
+			</div>
+			<div class="property_card yellow_bg">
+				<span>导入ETH钱包</span>
+			</div>
+			<div class="property_card black_bg">
+				<span>导入BTC钱包</span>
+			</div>
+			<!--有-->
+			<div class="blue_bg card_one mui-row">
+				<div class="mui-col-sm-3 mui-col-xs-3">
+					<img src="../img/property/wallet.png" alt="" />
+				</div>
+				<div class="mui-col-sm-6 mui-col-xs-6">
+					<div>DCAR-Wallet</div>
+					<div>0.000DCAR</div>
+					<div>&yen;0.00</div>
+					<div>0xbsdakdhkdsidusidshhskkh</div>
+				</div>
+				<div class="mui-col-sm-3 mui-col-xs-3">
+					<p>
+						<span>买入</span>
+					</p>
+					<p>
+						<span>卖出</span>
+					</p>
+				</div>
+			</div>
+			<div class="yellow_bg card_one mui-row">
+				<div class="mui-col-sm-3 mui-col-xs-3">
+					<img src="../img/property/wallet.png" alt="" />
+				</div>
+				<div class="mui-col-sm-9 mui-col-xs-9">
+					<div>ETH-Wallet</div>
+					<div>0.000DCAR</div>
+					<div>&yen;0.00</div>
+					<div>0xbsdakdhkdsidusidshhskkh</div>
+				</div>
+			</div>
+			<div class="black_bg card_one mui-row">
+				<div class="mui-col-sm-3 mui-col-xs-3">
+					<img src="../img/property/wallet.png" alt="" />
+				</div>
+				<div class="mui-col-sm-9 mui-col-xs-9">
+					<div>BTC-Wallet</div>
+					<div>0.000DCAR</div>
+					<div>&yen;0.00</div>
+					<div>0xbsdakdhkdsidusidshhskkh</div>
+				</div>
+			</div>
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
