--- a/pages/home.html
+++ b/pages/home.html
@@ -61,7 +61,7 @@
 			官方公告
 		</div>
 		<ul class="mui-table-view">
-			<li class="mui-table-view-cell mui-media newact" url="/public/notice.html">
+			<li class="mui-table-view-cell mui-media" onclick="go_detail()">
 				<a href="javascript:;">
 					<img class="mui-media-object mui-pull-left" src="../img/home/list_icon.png">
 					<div class="mui-media-body">
@@ -73,7 +73,7 @@
 					</div>
 				</a>
 			</li>
-			<li class="mui-table-view-cell mui-media newact" url="/public/notice.html">
+			<li class="mui-table-view-cell mui-media" @click="show">
 				<a href="javascript:;">
 					<img class="mui-media-object mui-pull-left" src="../img/home/list_icon.png">
 					<div class="mui-media-body">
@@ -136,11 +136,38 @@
 
 		</ul>
 		<script src="../js/mui.min.js"></script>
-		<script src="../js/jquery-2.1.1.min.js"></script>
-		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/vue.js"></script>
+		<!--<script src="../js/jquery-2.1.1.min.js"></script>-->
+		<!--<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>-->
+		<!--<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>-->
 		<script type="text/javascript">
+//			var vm = new Vue({
+//				el:'#app'
+//				methods :{
+//					show() {
+//						alert('1')
+//					}
+//				}
+//			})
 			mui.init()
+			//预加载详情页
+			var homeDetail = mui.preload({
+				id: "notice.html",
+				url: "../public/notice.html"
+			});
+			//打开详情页
+			function go_detail() {
+				mui.fire(homeDetail, "movieID", {
+					id: 123
+				})
+				mui.openWindow({
+					id: "notice.html",
+					url: "../public/notice.html",
+					show: {
+						aniShow: "slide-in-right", //页面显示动画，默认为”slide-in-right“；
+					},
+				})
+			}
 			mui.plusReady(function() {
 				var gallery = mui('.mui-slider');
 				gallery.slider({
