--- a/pages/mine.html
+++ b/pages/mine.html
@@ -6,11 +6,51 @@
 		<title>我的</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="../css/mine.css"/>
 	</head>
 
 	<body>
-		我的
+		<div class="header">
+			<div class="portrait">
+				<img src="../img/mine/icon_Sign.png" class="newact" url="/public/login.html"/>
+			</div>
+			<p class="newact" url="/public/login.html">登录与注册</p>
+		</div>
+		<div class="content">
+			<div class="means">
+				<img src="../img/mine/icon_assets.png"/>
+				<p>我的资产</p>
+			</div>
+			<div class="manage">
+				<img src="../img/mine/icon_miner.png"/>
+				<p>矿机管理</p>
+			</div>
+		</div>
+		<div class="operation_list">
+			<ul class="list">
+				<li>
+					<img src="../img/mine/icon_invitation.png"/>
+					<p>邀请有礼</p>
+					<span class="mui-icon mui-icon-arrowright"></span>
+				</li>
+				<li>
+					<img src="../img/mine/icon_about.png"/>
+					<p>关于我们</p>
+					<span class="mui-icon mui-icon-arrowright"></span>
+				</li>
+				<li>
+					<img src="../img/mine/icon_clear.png"/>
+					<p>清理缓存</p>
+				</li>
+				<li>
+					<img src="../img/mine/icon_opinion.png"/>
+					<p>意见反馈</p>
+					<span class="mui-icon mui-icon-arrowright"></span>
+				</li>
+			</ul>
+		</div>
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
