--- a/public/register.html
+++ b/public/register.html
@@ -37,7 +37,7 @@
 				<p></p>
 		    </div>
 		    <p class="send_code">发送验证码</p>
-			<button type="button" class="mui-btn mui-btn-primary cannot" id="next">下一步</button>
+			<button type="button" class="mui-btn mui-btn-primary cannot newact" id="next" url="/public/setPassword.html">下一步</button>
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
