--- a/public/setPassword.html
+++ b/public/setPassword.html
@@ -17,6 +17,20 @@
 		<div class="mui-content between">
 			<h4>设置密码</h4>
 			<p class="limit">8-20位字符，不可以是纯数字</p>
+			<div class="mui-input-row info">
+				<input type="password" class="mui-input-password" placeholder="请输入密码" id="pass">
+			</div>
+			<div class="mui-input-row info">
+				<input type="password" class="mui-input-password" placeholder="请再次输入密码" id="ensurePass">
+			</div>
+			<div class="mui-input-row info">
+				<input type="text" class="mui-input-clear" placeholder="请输入邀请码（选填）">
+			</div>
+			<div class="mui-input-row mui-checkbox agreement">
+			    <input name="checkbox1" id="isagree" value="Item 1" type="checkbox" checked>
+			    <label>我同意<a>《用户协议》</a></label>
+			</div>
+			<button type="button" class="mui-btn mui-btn-primary" id="zhuce">注册</button>
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
@@ -24,6 +38,15 @@
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init()
+			$("#isagree").on("change", function(){
+				if ($("#isagree").is(":checked")) {
+					$("#zhuce").removeClass("cannot")
+					$("#zhuce").addClass("can")
+				} else {
+					$("#zhuce").removeClass("can")
+					$("#zhuce").addClass("cannot")
+				}
+			})
 		</script>
 	</body>
 
