--- a/public/about.html
+++ b/public/about.html
@@ -15,6 +15,11 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		    <h1 class="mui-title">关于我们</h1>
 		</header>
+		<div class="mui-content">
+			<div class="logo">
+				<img src="../img/about/img_DCAR1.png"/>
+			</div>
+		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
