--- a/property/wallet-address.html
+++ b/property/wallet-address.html
@@ -20,6 +20,7 @@
 				<img src="../img/property/code.jpg" alt="" />
 				<img src="../img/property/code_border.png" alt="" />
 			</div>
+			<div class="address_box">3035465464566747ddd</div>
 			<div class="copy_btn">点击复制钱包地址</div>
 		</div>
 		<script src="../js/mui.min.js"></script>
