--- a/pages/mine.html
+++ b/pages/mine.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class="header">
 			<div class="portrait">
-				<img src="../img/mine/icon_Sign.png" class="newact" url="/public/login.html"/>
+				<img src="../img/mine/icon_Sign.png" class="newact" url="/users/userInfo.html"/>
 			</div>
 			<p class="newact" url="/public/login.html">登录与注册</p>
 		</div>
