--- a/users/alterPassword.html
+++ b/users/alterPassword.html
@@ -21,7 +21,20 @@
 			</div>
 			<button type="button" class="mui-btn mui-btn-primary cannot" id="next">下一步</button>
 		</div>
-		<div class="email_code_box"></div>
+		<div class="mui-popover email_code_box">
+			<div class="popover_header">
+				<p>安全验证</p>
+				<span id="cancel">取消</span>
+			</div>
+			<div class="popover_content">
+				<p>sch****@163.com</p>
+				<div class="popover_email">
+					<input type="tel" value="" placeholder="请输入邮箱验证码" id="emailCode">
+					<a>发送</a>
+				</div>
+				<button type="button" class="mui-btn mui-btn-primary cannot" id="ensure">确定</button>
+			</div>
+		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
@@ -39,8 +52,10 @@
 			})
 			mui.plusReady(function(){
 				$("#next").on("click", function() {
-					alert(1)
 					mui('.email_code_box').popover('toggle');
+				})
+				$("#cancel").on("click", function() {
+					mui('.email_code_box').popover('hide');
 				})
 			})
 		</script>
