--- a/index.html
+++ b/index.html
@@ -16,30 +16,26 @@
 		<nav class="mui-bar mui-bar-tab" id="footer">
 			<a id="defaultTab" class="mui-tab-item mui-active" href="pages/home.html">
 				<div class="img_box">
-					<img src="img/home/icon_homepage0.png" alt="" />
-					<!--<img src="img/home/icon_homepage1.png" alt="" />-->
+					<i class="iconfont icon-home"></i>
 				</div>
 				<span class="mui-tab-label">首页</span>
 			</a>
 			<a id="shangxueyuan" class="mui-tab-item" href="pages/market.html">
 				<div class="img_box">
-					<img src="img/home/icon_quotation0.png" alt="" />
-					<!--<img src="img/home/icon_quotation1.png" alt="" />-->
+					<i class="iconfont icon-hangqing"></i>
 				</div>
 				<span class="mui-tab-label">行情</span>
 			</a>
 			<a id="gongqiu" class="mui-tab-item" href="pages/property.html">
 				<div class="img_box">
-					<img src="img/home/icon_transaction0.png" alt="" />
-					<!--<img src="img/home/icon_transaction1.png" alt="" />-->
+					<i class="iconfont icon-zichan"></i>
 				</div>
 				<span class="mui-tab-label">资产</span>
 			</a>
 
 			<a class="mui-tab-item" href="pages/mine.html">
 				<div class="img_box">
-					<img src="img/home/icon_mine0.png" alt="" />
-					<!--<img src="img/home/icon_mine1.png" alt="" />-->
+					<i class="iconfont icon-wode"></i>
 				</div>
 				<span class="mui-tab-label">我的</span>
 			</a>
