--- a/pages/mine.html
+++ b/pages/mine.html
@@ -26,7 +26,7 @@
 					<span class="mui-icon mui-icon-arrowright"></span>
 				</li>
 				<li class="newact" url="/public/about.html">
-					<i class="iconfont icon-shebeiguanli" style="font-size: 18px;"></i>
+					<i class="iconfont icon-shebeiguanli"></i>
 					<p>矿机管理</p>
 					<span class="mui-icon mui-icon-arrowright"></span>
 				</li>
