--- a/users/invite.html
+++ b/users/invite.html
@@ -6,24 +6,25 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="../css/invite.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/invite.css" />
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav header">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">邀请好友</h1>
+			<h1 class="mui-title">邀请好友</h1>
 		</header>
 		<div class="mui-content between">
 			<p class="title">“邀请好友返佣金”</p>
 			<div class="logo">
-				<img src="../img/invite/img_bg2.png"/>
+				<img src="../img/invite/img_bg2.png" />
 			</div>
 			<div class="request">
 				<div class="request_top">
 					<p>邀请码</p>
 					<h4>KBAL</h4>
-					<button>立即邀请好友</button>
+					<button onclick="shareHref()">立即邀请好友</button>
 				</div>
 				<div class="request_bottom">
 					<h5>邀请无上限&nbsp;&nbsp;已邀请0人</h5>
@@ -31,9 +32,145 @@
 				</div>
 			</div>
 		</div>
+		<div style="display: none;">
+			<p>链接地址：</p>
+			<input id="sharehref" type="url" value="http://www.baidu.com/" />
+			<p>链接标题：</p>
+			<input id="sharehrefTitle" type="text" value="title" />
+			<p>链接描述：</p>
+			<input id="sharehrefDes" type="text" value="test" /></br>
+		</div>
 		<script src="../js/mui.min.js"></script>
 		<script type="text/javascript">
 			mui.init()
+			var shares = null;
+			var Intent = null,
+				File = null,
+				Uri = null,
+				main = null;
+			// H5 plus事件处理
+			function plusReady() {
+				updateSerivces();
+				if(plus.os.name == "Android") {
+					main = plus.android.runtimeMainActivity();
+					Intent = plus.android.importClass("android.content.Intent");
+					File = plus.android.importClass("java.io.File");
+					Uri = plus.android.importClass("android.net.Uri");
+				}
+			}
+			if(window.plus) {
+				plusReady();
+			} else {
+				document.addEventListener("plusready", plusReady, false);
+			}
+
+			/**
+			 * 
+			 * 更新分享服务
+			 */
+			function updateSerivces() {
+				plus.share.getServices(function(s) {
+					shares = {};
+					for(var i in s) {
+						var t = s[i];
+						shares[t.id] = t;
+					}
+				}, function(e) {
+					alert("获取分享服务列表失败：" + e.message);
+				});
+			}
+
+			/**
+			 * 分享操作
+			 * @param {JSON} sb 分享操作对象s.s为分享通道对象(plus.share.ShareService)
+			 * @param {Boolean} bh 是否分享链接
+			 */
+			function shareAction(sb, bh) {
+				if(!sb || !sb.s) {
+					alert("无效的分享服务！");
+					return;
+				}
+
+				var msg = {
+					content: sharehrefDes.value,
+					extra: {
+						scene: sb.x
+					}
+				};
+				if(bh) {
+					msg.href = sharehref.value;
+					if(sharehrefTitle && sharehrefTitle.value != "") {
+						msg.title = sharehrefTitle.value;
+					}
+					if(sharehrefDes && sharehrefDes.value != "") {
+						msg.content = sharehrefDes.value;
+					}
+					msg.thumbs = ["_www/logo.png"];
+					msg.pictures = ["_www/logo.png"];
+				} else {
+					if(pic && pic.realUrl) {
+						msg.pictures = [pic.realUrl];
+					}
+				}
+				// 发送分享
+				if(sb.s.authenticated) {
+					alert("---已授权---");
+					shareMessage(msg, sb.s);
+				} else {
+					alert("---未授权---");
+					sb.s.authorize(function() {
+						shareMessage(msg, sb.s);
+					}, function(e) {
+						alert("认证授权失败：" + e.code + " - " + e.message);
+
+					});
+				}
+			}
+			/**
+			 * 发送分享消息
+			 * @param {JSON} msg
+			 * @param {plus.share.ShareService} s
+			 */
+			function shareMessage(msg, s) {
+
+				alert(JSON.stringify(msg));
+				s.send(msg, function() {
+					alert("分享到\"" + s.description + "\"成功！ ");
+
+				}, function(e) {
+					alert("分享到\"" + s.description + "\"失败: " + JSON.stringify(e));
+
+				});
+			}
+			// 分析链接
+			function shareHref() {
+				var shareBts = [];
+				// 更新分享列表
+				var ss = shares['weixin'];
+				ss && ss.nativeClient && (shareBts.push({
+						title: '微信朋友圈',
+						s: ss,
+						x: 'WXSceneTimeline'
+					}),
+					shareBts.push({
+						title: '微信好友',
+						s: ss,
+						x: 'WXSceneSession'
+					}));
+				ss = shares['qq'];
+				ss && ss.nativeClient && shareBts.push({
+					title: 'QQ',
+					s: ss
+				});
+				// 弹出分享列表
+				shareBts.length > 0 ? plus.nativeUI.actionSheet({
+					title: '分享链接',
+					cancel: '取消',
+					buttons: shareBts
+				}, function(e) {
+					(e.index > 0) && shareAction(shareBts[e.index - 1], true);
+				}) : plus.nativeUI.alert('当前环境无法支持分享链接操作!');
+			}
 		</script>
 	</body>
 
