--- a/users/userInfo.html
+++ b/users/userInfo.html
@@ -6,21 +6,21 @@
 		<title>个人信息</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/userInfo.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/style.css" />
+		<link rel="stylesheet" type="text/css" href="../css/userInfo.css" />
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav header">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">个人信息</h1>
+			<h1 class="mui-title">个人信息</h1>
 		</header>
 		<div class="mui-content between">
 			<ul>
 				<li>
 					<h6>头像</h6>
-					<span class="mui-icon mui-icon-arrowright"></span>
-					<div class="portrait"></div>
+					<span class="mui-icon mui-icon-arrowright imageup"></span>
+					<div class="portrait imageup"></div>
 				</li>
 				<li class="newact" url="/users/alterUserName.html">
 					<h6>用户名</h6>
@@ -36,6 +36,8 @@
 					<span class="mui-icon mui-icon-arrowright"></span>
 				</li>
 			</ul>
+		</div>
+		<div class="btn">
 			<button type="button" class="mui-btn mui-btn-primary cannot" id="signOut">退出登录</button>
 		</div>
 		<script src="../js/mui.min.js"></script>
@@ -44,6 +46,120 @@
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init()
+
+			function plusReady() {
+				// 弹出系统选择按钮框
+				mui("body").on("tap", ".imageup", function() {
+					page.imgUp();
+				})
+
+			}
+
+			var page = null;
+			page = {
+				imgUp: function() {
+					var m = this;
+					plus.nativeUI.actionSheet({
+						cancel: "取消",
+						buttons: [{
+								title: "拍照"
+							},
+							{
+								title: "从相册中选择"
+							}
+						]
+					}, function(e) { //1 是拍照  2 从相册中选择
+						switch(e.index) {
+							case 1:
+								clickCamera();
+								break;
+							case 2:
+								clickGallery();
+								break;
+						}
+					});
+				}
+				//摄像头
+			}
+			//发送照片
+
+			function clickGallery() {
+				plus.gallery.pick(function(path) {
+					plus.zip.compressImage({
+						src: path,
+						dst: "_doc/chat/gallery/" + path,
+						quality: 20,
+						overwrite: true
+					}, function(e) {
+						var task = plus.uploader.createUpload(server + "upload/chat", {
+							method: "post"
+						}, function(t, sta) {
+							console.log(JSON.stringify(t))
+							if(sta == 200) {
+								var msg = t.responseText;
+								var oImg = JSON.parse(msg);
+								var imgUrl = oImg.urls;
+								var re = new RegExp("\\\\", "g");
+								imgUrl = imgUrl.replace(re, "/");
+								uploadMsg(2, imgUrl);
+							}
+						});
+						task.addFile(e.target, {});
+						task.start();
+					}, function(err) {
+						console.error("压缩失败：" + err.message);
+					});
+
+				}, function(err) {});
+			};
+
+			// 拍照
+
+			function clickCamera() {
+				var cmr = plus.camera.getCamera();
+				var res = cmr.supportedImageResolutions[0];
+				var fmt = cmr.supportedImageFormats[0];
+				cmr.captureImage(function(path) {
+					//plus.io.resolveLocalFileSystemURL(path, function(entry) {
+					plus.io.resolveLocalFileSystemURL(path, function(entry) {
+						var localUrl = entry.toLocalURL();
+						plus.zip.compressImage({
+							src: localUrl,
+							dst: "_doc/chat/camera/" + localUrl,
+							quality: 20,
+							overwrite: true
+						}, function(e) {
+							var task = plus.uploader.createUpload(server + "upload/chat", {
+								method: "post"
+							}, function(t, sta) {
+								if(sta == 200) {
+									var msg = t.responseText;
+									var oImg = JSON.parse(msg);
+									var imgUrl = oImg.urls;
+									var re = new RegExp("\\\\", "g");
+									imgUrl = imgUrl.replace(re, "/");
+									console.log(imgUrl);
+									uploadMsg(2, imgUrl);
+								}
+							});
+							task.addFile(e.target, {});
+							task.start();
+						}, function(err) {
+							console.log("压缩失败：  " + err.message);
+						});
+					});
+				}, function(err) {
+					console.error("拍照失败：" + err.message);
+				}, {
+					index: 1
+				});
+			};
+
+			if(window.plus) {
+				plusReady();
+			} else {
+				document.addEventListener("plusready", plusReady, false);
+			}
 		</script>
 	</body>
 
