--- a/pages/mine.html
+++ b/pages/mine.html
@@ -22,7 +22,7 @@
 			<ul class="list">
 				<li class="newact" url="/users/invite.html">
 					<i class="iconfont icon-zichan"></i>
-					<p>我的资产</p>
+					<p>交易记录</p>
 					<span class="mui-icon mui-icon-arrowright"></span>
 				</li>
 				<li class="newact" url="/public/about.html">
