--- a/pages/mine.html
+++ b/pages/mine.html
@@ -20,12 +20,12 @@
 		</div>
 		<div class="content operation_list">
 			<ul class="list">
-				<li class="newact" url="/users/invite.html">
+				<li class="newact" url="/users/tradeRecord.html">
 					<i class="iconfont icon-zichan"></i>
 					<p>交易记录</p>
 					<span class="mui-icon mui-icon-arrowright"></span>
 				</li>
-				<li class="newact" url="/public/about.html">
+				<li class="newact">
 					<i class="iconfont icon-shebeiguanli"></i>
 					<p>矿机管理</p>
 					<span class="mui-icon mui-icon-arrowright"></span>
