--- a/users/alterPassword.html
+++ b/users/alterPassword.html
@@ -33,7 +33,7 @@
 					<input type="tel" value="" placeholder="请输入邮箱验证码" id="emailCode">
 					<a>发送</a>
 				</div>
-				<button type="button" class="mui-btn mui-btn-primary cannot" id="ensure">确定</button>
+				<button type="button" class="mui-btn mui-btn-primary cannot newact" id="ensure" url="/users/resetPassword.html">确定</button>
 			</div>
 		</div>
 		<script src="../js/mui.min.js"></script>
