--- a/users/userInfo.html
+++ b/users/userInfo.html
@@ -17,10 +17,10 @@
 		</header>
 		<div class="mui-content between">
 			<ul>
-				<li>
+				<li class="imageup">
 					<h6>头像</h6>
-					<span class="mui-icon mui-icon-arrowright imageup"></span>
-					<div class="portrait imageup"></div>
+					<span class="mui-icon mui-icon-arrowright"></span>
+					<div class="portrait"></div>
 				</li>
 				<li class="newact" url="/users/alterUserName.html">
 					<h6>用户名</h6>
