--- a/pages/mine.html
+++ b/pages/mine.html
@@ -25,7 +25,7 @@
 					<p>交易记录</p>
 					<span class="mui-icon mui-icon-arrowright"></span>
 				</li>
-				<li class="newact">
+				<li class="newact" url="/users/oreManage.html">
 					<i class="iconfont icon-shebeiguanli"></i>
 					<p>矿机管理</p>
 					<span class="mui-icon mui-icon-arrowright"></span>
