--- a/users/oreManage.html
+++ b/users/oreManage.html
@@ -18,6 +18,38 @@
 		    <i class="iconfont icon-saoma saoma_btn newact" url="/users/barcode.html" onclick="clicked(this.id)"></i>
 		    <i class="iconfont icon-shebeiguanli complete_btn"></i>
 		</header>
+		<div class="mui-content between">
+			<div class="miner online">
+				<div class="title">
+					<p class="name">矿机一</p>
+					<p class="state">在线</p>
+				</div>
+				<div class="detail">
+					<div class="state_box">
+						<img src="../img/ore/icon_state1.png"/>
+					</div>
+					<div class="miner_word">
+						<p>算力值&nbsp;&nbsp;<span>44077.86</span>KH/S</p>
+						<p>矿机地址&nbsp;&nbsp;dwsdffsafafagagdgfghdfgd</p>
+					</div>
+				</div>
+			</div>
+			<div class="miner offline">
+				<div class="title">
+					<p class="name">矿机二</p>
+					<p class="state">离线</p>
+				</div>
+				<div class="detail">
+					<div class="state_box">
+						<img src="../img/ore/icon_state0.png"/>
+					</div>
+					<div class="miner_word">
+						<p>算力值&nbsp;&nbsp;<span>44077.86</span>KH/S</p>
+						<p>矿机地址&nbsp;&nbsp;dwsdffsafafagagdgfghdfgd</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
