--- a/users/barcode.html
+++ b/users/barcode.html
@@ -7,13 +7,13 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/style.css" />
-		<link rel="stylesheet" type="text/css" href="../css/barcode.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/barcode.css" />
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav header">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">添加矿机</h1>
+			<h1 class="mui-title">添加矿机</h1>
 		</header>
 		<div id="bcid">
 			<div style="height:40%"></div>
@@ -54,6 +54,7 @@
 				plusReady();
 			} else {
 				document.addEventListener('plusready', plusReady, false);
+				plusReady();
 			}
 			// 监听DOMContentLoaded事件
 			document.addEventListener('DOMContentLoaded', function() {
@@ -78,7 +79,18 @@
 				}
 				result = result.replace(/\r\n/g, '');
 				wo.evalJS("scaned('" + type + "','" + result + "','" + file + "');");
-				back();
+				alert('扫码成功')
+				let time = null;
+				clearTimeout(time);
+				setTimeout(function() {
+					mui.openWindow({
+						url: '/users/addOre.html',
+						id: '/users/addOre.html',
+						waiting: {
+							autoShow: false,
+						}
+					})
+				}, 1000)
 			}
 			// 从相册中选择二维码图片 
 			function scanPicture() {
